--- a/Salvamento/Pantallas/Areas/areas.html
+++ b/Salvamento/Pantallas/Areas/areas.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
 </head>
@@ -29,27 +30,27 @@
             </div>
         </div>
         <div class="area">
-            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <img src="/Imagenes/salv-deportivo-2018.jpg" alt="Imagen 1">
             <div class="text-content">
-                <h4>ESCOLA DE SALVAMENTO</h4>
-                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
-                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
+                <h4>SALVAMENTO DEPORTIVO</h4>
+                <h2>Foron moitos os recoñecementos deportivos obtidos polo club e os seus deportistas dende os seus inicios na competición no 1992</h2>
+                <p>Conta nas súas filas con varios deportistas chamados pola selección galega de salvamento tanto para competicións a nivel nacional como internacional e varios deportistas foron convocados pola Federación Española de Salvamento para una concentración de talentos. Na actualidade contamos cunha deportista que recibiu a convocatoria da selección española para ser concentrada co resto de talentos a nivel nacional, o que lle outorga a distinción de ser a primeira persoa do club que acude a unha concentración nacional con chamada directa.</p>
             </div>
         </div>
         <div class="area">
-            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <img src="/Imagenes/salv-profesional-2018.jpg" alt="Imagen 1">
             <div class="text-content">
-                <h4>ESCOLA DE SALVAMENTO</h4>
-                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
-                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
+                <h4>SALVAMENTO PROFESIONAL</h4>
+                <h2>O club aporta a difusión da profesión de socorrista, e ó seu valor mediante cursos prácticos de iniciación ó salvamento profesional, a través do salvamento deportivo e con prácticas en praias cun equipo de socorrismo cualificado</h2>
+                <p>O club tamén realizou un curso de 2 meses de duración no concello de Cabana de Bergantiños para rapaces e rapazas de entre 18 e 30 anos, no que aprenderon a empregar material de salvamento e realizaron probas de salvamento deportivo en augas abertas e pechadas.</p>
             </div>
         </div>
         <div class="area">
-            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <img src="/Imagenes/natacion-adaptada-2018.jpg" alt="Imagen 1">
             <div class="text-content">
-                <h4>ESCOLA DE SALVAMENTO</h4>
-                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
-                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
+                <h4>NATACIÓN ADAPTADA</h4>
+                <h2>Dende finales do 2014, o noso club converteuse no 1º club galego en crear unha área para deportistas de diversidade funcional</h2>
+                <p>O obxectivo de esta área é o de iniciar no mundo da natación, perfeccionar as técnicas de nado e realizar exercicios específicos adaptados para mellorar a calidade de vida de estas persoas con algún tipo de discapacidade funcional. Na actualidade xa contamos con un total de 18 deportistas en esta sección que van dende os 4 ata os 35 anos.</p>
             </div>
         </div>
     </section>
