--- a/Salvamento/Pantallas/Galeria/galeria.html
+++ b/Salvamento/Pantallas/Galeria/galeria.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
+    <script src="/JS/galeria.js"></script>
 </head>
 <body>
 
@@ -59,5 +61,10 @@
 
     <div id="footer"></div>
     
+    <div id="modal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+    </div>
+
 </body>
 </html>
