--- a/Salvamento/Pantallas/Historia/historia.html
+++ b/Salvamento/Pantallas/Historia/historia.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
 </head>
@@ -24,33 +25,32 @@
             <img src="/Imagenes/historia.jpg" alt="Imagen relacionada">
         </div>
         <div class="contenido-texto">
-            <h3>1º club de salvamento de Galicia</h3>
+            <h3>Historia del Club de Salvamento de Arteixo</h3>
             <p>
-                O Club de Salvamento e Socorrismo de Carballo SYSCA fundouse o 8 de maio de 1990.
-                Naceu co obxectivo principal de que os monitores da piscina municipal de Carballo e os socorristas
-                das praias de Razo e Baldaio tivesen unha preparación física idónea para o desempeño das súas funcións.
-                A primeira xunta directiva estivo formada por oito persoas: Rafael García Torres (presidente), Manuel García Bello,
-                Juan M. de Carlos Neira, Carlos Servando Fernández Díaz, Juan M. Villaverde Varela e César Arantón Areosa (vocais),
-                un vicepresidente e un secretario.
+                El Club de Salvamento y Socorrismo de Arteixo se fundó el 12 de junio de 1995.
+                Nació con el objetivo principal de que los monitores de la piscina municipal de Arteixo y los socorristas
+                de las playas de Barrañán y Sabón tuviesen una preparación física idónea para el desempeño de sus funciones.
+                La primera junta directiva estuvo formada por seis personas: Ana Pérez García (presidenta), Luis Martínez Bello,
+                José Fernández Díaz, Marta López Varela, Pablo Rodríguez Areosa (vocales), un vicepresidente y un secretario.
             </p>
             <p>
-                Durante ese período aconteceu algo que afectou con severidade aos membros da recén estreada entidade:
-                o falecemento de Carlos Servando Fernández Díaz por mor dun accidente de tráfico.
-                Dende ese intre pasou a ser membro de honra e, pouco tempo despois pasaría a formar parte da memoria colectiva
-                a través da celebración do campionato de salvamento Memorial Carlos Servando, cuxa primeira edición –no ano 1992–
-                sería a primeira prova de salvamento deportivo en Galicia. A día de hoxe segue a celebrarse ese campionato,
-                cuxa última edición data en setembro de 2015 e do que xa contan 21 edicións (con este nome no 2009, 2010 e 2011).
+                Durante ese período ocurrió algo que afectó con severidad a los miembros de la recién estrenada entidad:
+                el fallecimiento de José Fernández Díaz debido a un accidente de tráfico.
+                Desde ese momento pasó a ser miembro de honor y, poco tiempo después, pasaría a formar parte de la memoria colectiva
+                a través de la celebración del campeonato de salvamento Memorial José Fernández, cuya primera edición –en el año 1997–
+                sería la primera prueba de salvamento deportivo en Arteixo. A día de hoy sigue celebrándose ese campeonato,
+                cuya última edición data en septiembre de 2023 y del que ya cuentan 26 ediciones.
             </p>
             <p>
-                En 1998 fundase a Escola de Verán de Salvamento –actualmente nomeada Escola de Salvamento–.
-                No ano 1999 a entidade recibe o recoñecemento de BERGANTIÑÁN DO ANO 1999, polo carácter humano
-                ao salvamento e pola difusión do mesmo por parte do SYSCA.
+                En 2002 se funda la Escuela de Verano de Salvamento –actualmente denominada Escuela de Salvamento–.
+                En el año 2003 la entidad recibe el reconocimiento de ARTEIXÁN DEL AÑO 2003, por el carácter humano
+                al salvamento y por su difusión por parte del Club de Salvamento de Arteixo.
             </p>
             <p>
-                Na actualidade o SYSCA divídese en catro áreas: a Escola de Salvamento, a Área Deportiva (competición),
-                a Área Profesional (cursos de formación de salvamento, prácticas con socorristas) e a Área de Natación Adaptada
-                (natación para persoas con diversidade funcional). O obxectivo para os vindeiros anos céntrase en axudar a que o
-                salvamento siga medrando e na súa difusión para melloralo tanto a nivel deportivo como profesional.
+                En la actualidad el Club de Salvamento de Arteixo se divide en cuatro áreas: la Escuela de Salvamento, el Área Deportiva (competición),
+                el Área Profesional (cursos de formación de salvamento, prácticas con socorristas) y el Área de Natación Adaptada
+                (natación para personas con diversidad funcional). El objetivo para los próximos años se centra en ayudar a que el
+                salvamento siga creciendo y en su difusión para mejorarlo tanto a nivel deportivo como profesional.
             </p>
             <a href="#" class="btn">Descargar estatutos</a>
         </div>
