--- a/Salvamento/Pantallas/Navbar/navbar.html
+++ b/Salvamento/Pantallas/Navbar/navbar.html
@@ -22,6 +22,8 @@
             <ul>
                 <li><a href="/Pantallas/Eventos/eventos.html">Eventos</a></li>
                 <li><a href="/Pantallas/Practicas/Practicas.html">Profesional</a></li>
+                <li><a href="/Pantallas/Calendario/calendario.html">Calendario</a></li>
+                <li><a href="/Pantallas/Mínimas Normativa  Records/MínimasNormativaRecords.html">Normativa/Records</a></li>
             </ul>
         </li>
         <li>
