--- a/Salvamento/Pantallas/Ornanigrama/Ornanigrama.html
+++ b/Salvamento/Pantallas/Ornanigrama/Ornanigrama.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
 </head>
@@ -20,80 +21,80 @@
     </section>
 
     <section class="texto">
-      <div class="columna">
-          <div class="foto">
-              <img src="./Imagenes/p3.png" alt="fotoPerfil" class="fotoPerfil">
-          </div>
-          <div class="detalles">
-              <ul>
-                  <li>DIEGO LÓPEZ</li>
-                  <li>Graduado en Ciencias da Actividade Física e o Deporte.</li>
-                  <li>Técnico Deportivo de Salvamento Nivel II.</li>
-                  <li>Director Técnico Club Acuático Umia (3 anos).</li>
-                  <li>Director Técnico Club Acuático Laracha (4 anos).</li>
-                  <li>Adestrador da Selección Española Absoluta no 2017 e 2019.</li>
-                  <li>Adestrador da Selección Galega no 2018 e 2019.</li>
-                  <li>Próximos desempeños 2022/23</li>
-                  <li>
-                      Director Técnico Deportivo do clube.
-                      <ul>
-                          <li>Planificación dos adestramentos e coordinación dos obxectivos a acadar polos monitores dos diferentes grupos.</li>
-                          <li>Adestrador de diversos grupos de competición.</li>
-                      </ul>
-                  </li>
-              </ul>
-          </div>       
-      </div>
-      <div class="columna">
-          <div class="foto">
-              <img src="./Imagenes/p1.png" alt="fotoPerfil" class="fotoPerfil">
-          </div>
-          <div class="detalles">
-              <ul>
-                  <li>DIEGO LÓPEZ</li>
-                  <li>Graduado en Ciencias da Actividade Física e o Deporte.</li>
-                  <li>Técnico Deportivo de Salvamento Nivel II.</li>
-                  <li>Director Técnico Club Acuático Umia (3 anos).</li>
-                  <li>Director Técnico Club Acuático Laracha (4 anos).</li>
-                  <li>Adestrador da Selección Española Absoluta no 2017 e 2019.</li>
-                  <li>Adestrador da Selección Galega no 2018 e 2019.</li>
-                  <li>Próximos desempeños 2022/23</li>
-                  <li>
-                      Director Técnico Deportivo do clube.
-                      <ul>
-                          <li>Planificación dos adestramentos e coordinación dos obxectivos a acadar polos monitores dos diferentes grupos.</li>
-                          <li>Adestrador de diversos grupos de competición.</li>
-                      </ul>
-                  </li>
-              </ul>
-          </div>       
-      </div>
-      <div class="columna">
-          <div class="foto">
-              <img src="./Imagenes/p2.png" alt="fotoPerfil" class="fotoPerfil">
-          </div>
-          <div class="detalles">
-              <ul>
-                  <li>DIEGO LÓPEZ</li>
-                  <li>Graduado en Ciencias da Actividade Física e o Deporte.</li>
-                  <li>Técnico Deportivo de Salvamento Nivel II.</li>
-                  <li>Director Técnico Club Acuático Umia (3 anos).</li>
-                  <li>Director Técnico Club Acuático Laracha (4 anos).</li>
-                  <li>Adestrador da Selección Española Absoluta no 2017 e 2019.</li>
-                  <li>Adestrador da Selección Galega no 2018 e 2019.</li>
-                  <li>Próximos desempeños 2022/23</li>
-                  <li>
-                      Director Técnico Deportivo do clube.
-                      <ul>
-                          <li>Planificación dos adestramentos e coordinación dos obxectivos a acadar polos monitores dos diferentes grupos.</li>
-                          <li>Adestrador de diversos grupos de competición.</li>
-                      </ul>
-                  </li>
-              </ul>
-          </div>       
-      </div>
-  </section>
-  
+        <div class="columna">
+            <div class="foto">
+                <img src="./Imagenes/p3.png" alt="fotoPerfil" class="fotoPerfil">
+            </div>
+            <div class="detalles">
+                <ul>
+                    <li>JUAN PÉREZ</li>
+                    <li>Graduado en Ciencias del Deporte y la Salud.</li>
+                    <li>Entrenador Personal Certificado.</li>
+                    <li>Director Técnico en Club Deportivo Marina (5 años).</li>
+                    <li>Director Técnico en Club Deportivo Ría (3 años).</li>
+                    <li>Entrenador de la Selección Nacional Juvenil en 2018 y 2020.</li>
+                    <li>Entrenador de la Selección Regional en 2019 y 2021.</li>
+                    <li>Próximos desempeños 2023/24</li>
+                    <li>
+                        Coordinador Deportivo del club.
+                        <ul>
+                            <li>Planificación de entrenamientos y coordinación de objetivos para los instructores de
+                                diferentes grupos.</li>
+                            <li>Entrenador de varios equipos de competición.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="columna">
+            <div class="foto">
+                <img src="./Imagenes/p1.png" alt="fotoPerfil" class="fotoPerfil">
+            </div>
+            <div class="detalles">
+                <ul>
+                    <li>MARIO GARCÍA</li>
+                    <li>Licenciada en Educación Física y Deporte.</li>
+                    <li>Especialista en Nutrición Deportiva.</li>
+                    <li>Coordinadora en Gimnasio FitLife (4 años).</li>
+                    <li>Directora Técnica en Club Deportivo Valle (3 años).</li>
+                    <li>Asesora de la Selección Nacional Femenina en 2017 y 2019.</li>
+                    <li>Entrenadora de la Selección Regional Femenina en 2020 y 2022.</li>
+                    <li>Próximos desempeños 2023/24</li>
+                    <li>
+                        Jefa de Entrenadores del club.
+                        <ul>
+                            <li>Desarrollo de programas de entrenamiento personalizados.</li>
+                            <li>Entrenadora de grupos de alto rendimiento.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="columna">
+            <div class="foto">
+                <img src="./Imagenes/p2.png" alt="fotoPerfil" class="fotoPerfil">
+            </div>
+            <div class="detalles">
+                <ul>
+                    <li>CARLOS FERNÁNDEZ</li>
+                    <li>Doctor en Ciencias del Deporte.</li>
+                    <li>Preparador Físico Profesional.</li>
+                    <li>Director Técnico en Club Deportivo Norte (6 años).</li>
+                    <li>Coordinador Deportivo en Club Deportivo Sur (2 años).</li>
+                    <li>Entrenador de la Selección Nacional Absoluta en 2016 y 2018.</li>
+                    <li>Entrenador de la Selección Regional Juvenil en 2017 y 2020.</li>
+                    <li>Próximos desempeños 2023/24</li>
+                    <li>
+                        Director de Alto Rendimiento del club.
+                        <ul>
+                            <li>Supervisión de entrenamientos y desarrollo de estrategias deportivas.</li>
+                            <li>Entrenador de equipos profesionales.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 
     <div id="footer"></div>
