--- a/Salvamento/Pantallas/Prensa/prensa.html
+++ b/Salvamento/Pantallas/Prensa/prensa.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
 </head>
@@ -22,22 +23,30 @@
     <section class="noticias">
         <div class="container">
             <div class="titulo-seccion">
-                <h2>Dos deportistas españoles de alto nivel en el Sysca</h2>
-                <p>Se trata de Brais Pensado Alberti y Gabriel Rodríguez Colferai</p>
+                <h2>Nuevos logros deportivos en el club SALVAR</h2>
+                <p>Recientes éxitos en competiciones nacionales e internacionales</p>
             </div>
             <div class="contenido">
                 <div class="imagenPrensa">
-                    <img src="/Imagenes/historia.jpg" alt="Dos deportistas españoles de alto nivel">
+                    <img src="/Imagenes/historia.jpg" alt="Nuevos logros deportivos en el club SALVAR">
                 </div>
                 <ul class="noticias-lista">
-                    <li><a href="#">14/07/2020: Dos deportistas españoles de alto nivel en el Sysca</a></li>
-                    <li><a href="#">07/07/2020: Sysca retoma la preparación con cuatro meses después</a></li>
-                    <li><a href="#">29/02/2020: El Sysca continúa cambiando de directiva</a></li>
-                    <li><a href="#">21/02/2020: El club Sysca, el mejor gallego en alevín, infantil y cadete</a></li>
+                    <li><a href="#">15/06/2024: SALVAR gana el campeonato nacional de salvamento</a></li>
+                    <li><a href="#">01/05/2024: Tres medallas de oro para SALVAR en el torneo internacional</a></li>
+                    <li><a href="#">22/03/2024: Nuevos récords en la liga regional de salvamento</a></li>
+                    <li><a href="#">10/02/2024: SALVAR organiza la mayor competencia de su historia</a></li>
+                    <li><a href="#">05/01/2024: SALVAR inicia el año con una victoria en la competencia regional</a></li>
+                    <li><a href="#">20/12/2023: SALVAR recibe reconocimiento por su labor comunitaria</a></li>
+                    <li><a href="#">15/11/2023: SALVAR incorpora nuevas tecnologías en su entrenamiento</a></li>
+                    <li><a href="#">30/10/2023: SALVAR realiza un campamento de entrenamiento en la montaña</a></li>
+                    <li><a href="#">25/09/2023: SALVAR firma un convenio con patrocinadores internacionales</a></li>
+                    <li><a href="#">10/08/2023: SALVAR participa en un evento benéfico de salvamento</a></li>
+                    <li><a href="#">01/07/2023: SALVAR abre nuevas inscripciones para jóvenes atletas</a></li>
                 </ul>
             </div>
         </div>
     </section>
+    
 
     <div id="footer"></div>
 
