--- a/Salvamento/index.html
+++ b/Salvamento/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/header.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/slider.js"></script>
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
@@ -43,14 +44,14 @@
                 <img src="./Imagenes/SAbiertas.jpg" alt="Socorrismo Aguas Abiertas">
                 <div class="slide-content">
                     <h1>Certificacións profesionais de socorrismo</h1>
-                    <a href="https://example.com" class="btn">Curso en espacios acuáticos naturais</a>
+                    <a href="/Pantallas/Curso Naturales/cursoEspaciosNaturales.html" class="btn">Curso en espacios acuáticos naturais</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="./Imagenes/SPiscina.png" alt="Socorrismo Piscinas">
                 <div class="slide-content">
                     <h1>Certificacións profesionais de socorrismo</h1>
-                    <a href="https://example.com" class="btn">Curso en instalacións acuáticas</a>
+                    <a href="/Pantallas/Curso Instalaciones/cursoInstalaciones.html" class="btn">Curso en instalacións acuáticas</a>
                 </div>
             </div>
         </div>
@@ -96,7 +97,7 @@
                 </div>
                 <div class="Noticia2">
                     <div class="imagen">
-                        <img src="./Imagenes/cto-europa-junior-salvamento-socorrismo-2023-1024x658.jpg" alt="Salvamento">
+                        <img src="./Imagenes/rfss-novas.jpg" alt="Salvamento">
                     </div>
                     <div class="texto">
                         <h3>Campeonato de Europa Júnior de Salvamento y Socorrismo 2023 - Selección nacional española</h3>
