--- a/Salvamento/Pantallas/Calendario/calendario.html
+++ b/Salvamento/Pantallas/Calendario/calendario.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/CSS/calendario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css' rel='stylesheet' />
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
     <script src="/JS/calendario.js"></script>
