--- a/Salvamento/Pantallas/Horarios/horarios.html
+++ b/Salvamento/Pantallas/Horarios/horarios.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="icon" href="/Imagenes/favicon.ico">
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
 </head>
