--- a/Salvamento/Pantallas/Navbar/navbar.html
+++ b/Salvamento/Pantallas/Navbar/navbar.html
@@ -3,8 +3,9 @@
         <img src="/Imagenes/logo.png" alt="logo" class="logo">
     </a>
     <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
+    <label for="check" class="checkbtn" alt="menu">
         <i class="fas fa-bars"></i>
+        <span class="visually-hidden">Menu</span>
     </label>
     <ul class="menu">
         <li>
@@ -37,8 +38,17 @@
         <li><a href="/Pantallas/Contacto/Contacto.html">CONTACTO</a></li>
     </ul>
     <div class="social-icons">
-        <a href="https://www.facebook.com/clubsalvamentoarteixo/?locale=es_ES"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/salvamentoarteixo/"><i class="fab fa-instagram"></i></a>
-        <a href="https://x.com/Salvar09"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/clubsalvamentoarteixo/?locale=es_ES">
+            <i class="fab fa-facebook-f"></i>
+            <span class="sr-only">Facebook</span>
+          </a>
+          <a href="https://www.instagram.com/salvamentoarteixo/">
+            <i class="fab fa-instagram"></i>
+            <span class="sr-only">Instagram</span>
+          </a>
+          <a href="https://x.com/Salvar09">
+            <i class="fab fa-twitter"></i>
+            <span class="sr-only">Twitter</span>
+          </a>          
     </div>
 </div> 
